# stress-testing

./: README.md  pyproject.toml  setup.py
examples/: basic_stress_test.py
scripts/: getting-started.bash
stress_testing/: __init__.py
stress_testing/calculators/: __init__.py  absolute.py  base.py  relative.py
stress_testing/core/: __init__.py  enums.py  factor.py  result.py  risk_array.py  scenario.py
stress_testing/engine/: __init__.py  stress_engine.py
stress_testing/scenarios/: __init__.py  builders.py  epr.py
stress_testing/utils/: __init__.py  factor_helpers.py
stress_testing/visualization/: plots.py
